# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: linter-and-test.yml
gendiff/: data_comparer.py  data_parser.py  file_reader.py  gendiff.py
gendiff/formatters/: formats.py  formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
