[tool.poetry]
name = "hexlet-code"
version = "0.6.8"
description = "Difference calculator utility"
authors = ["Konstantin Chupin <chupin.k@yandex.ru>"]
packages = [
  {include = "gendiff"},
]
repository = "<https://github.com/Trankvill/python-project-50>"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
