[tool.poetry]
name = "hexlet-code"
version = "1.2.6"
description = "Difference calculator utility"
authors = ["Konstantin Chupin <chupin.k@yandex.ru>"]
packages = [
  {include = "gendiff"},
]
repository = "<https://github.com/Trankvill/python-project-50>"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
PyYAML = "^6.0"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
